Demo with opencv-tersorflow DNN freamwork.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
-project( images_test )
+project( imageWithDNN )
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
-add_executable( images_test test_image.cpp )
+add_executable( DNNImage imageWithDNN.cpp )
 add_definitions(-std=c++11)
-target_link_libraries( images_test ${OpenCV_LIBS} )
+target_link_libraries( DNNImage ${OpenCV_LIBS} )
